--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,55 @@
+.container {
+    display:grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 8fr;
+    height:100vh;
+}
 
+.header {
+    grid-column: 1/-1;
+}
+
+.container > div {
+    border: 1px solid black;
+}
+
+body {
+    margin:0;
+}
+
+.container > .header {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sidebar > div {
+    border: 1px solid black;
+}
+
+.sidebar {
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap:1em;
+}
+
+.home > .header,
+.projects > .header {
+    font-weight:700;
+    font-size: 24px;
+}
+
+.home,
+.projects {
+    display:grid;
+    grid-template-rows: repeat(auto-fit,1fr);
+    gap:1em;
+}
+
+.content > .header {
+    text-align: center;
+    margin:1em;
+    padding:1em;
+    background-color: rgb(167, 165, 165);
+}
