--- a/src/style.css
+++ b/src/style.css
@@ -64,3 +64,7 @@ body {
 .home > div:not(:first-child):hover {
     background-color: grey;
 }
+
+.projectItem:hover {
+    background-color: grey;
+}
