--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@ body {
     gap:1em;
 }
 
-.home > .header,
+.home > #header,
 .projects > .header {
     font-weight:700;
     font-size: 24px;
@@ -59,6 +59,23 @@ body {
     flex-direction: column;
     align-content: center;
     padding:1em;
+    gap:1em;
+}
+
+.cards {
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    grid-auto-rows: 200px;
+    gap:10px;
+}
+
+.card {
+    display:flex;
+    flex-direction: column;
+    gap:10px;
+    padding:1em;
+    text-align: center;
+    border:1px solid black;
 }
 
 .home > div:not(:first-child):hover {
