--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@ body {
 .cards {
     display:grid;
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
-    grid-auto-rows: 200px;
+    grid-auto-rows: auto;
     gap:10px;
 }
 
