--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Minecraft';
+    src: url(./fonts/MinecraftTen-VGORe.ttf);
+}
+
 .container {
     display:grid;
     grid-template-columns: 1fr 5fr;
@@ -5,7 +10,7 @@
     height:100vh;
 }
 
-.header {
+.container > .header {
     grid-column: 1/-1;
 }
 
@@ -67,7 +72,8 @@ body {
     display:grid;
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     grid-auto-rows: auto;
-    gap:10px;
+    gap:15px;
+    overflow:auto;
 }
 
 .card {
@@ -87,4 +93,68 @@ body {
     background-color: grey;
 }
 
+/* colors */
 
+html {
+    color:white;
+    font-family:Minecraft,sans-serif;
+}
+
+.container > .header {
+    background-color:rgba(29,29,29,255);
+}
+
+.content {
+    background-color:rgba(18,18,18,255);
+}
+
+.card {
+    background-color:rgba(29,29,29,255);
+    border:none;
+    border-radius:10px;
+    border-left:10px solid rgba(187,134,252,255);
+}
+
+.sidebar {
+    background-color:rgba(18,18,18,255);
+}
+
+.home,
+.projects {
+    background-color:rgba(29,29,29,255);
+}
+
+button {
+    background-color: rgba(187,134,252,255);
+    border:none;
+    border-radius: 10px;
+    color:white;
+    padding:10px;
+    font-family: Minecraft;
+}
+
+.content > .header {
+    background-color:#404040;
+    font-family: Minecraft;
+}
+
+#form {
+    font-family:Minecraft;
+}
+
+.dim {
+    border-left:10px solid #D0F0C0;
+}
+
+.choice:hover {
+    background-color: grey;
+}
+
+.sidebar > div {
+    text-align: center;
+    padding:1em;
+}
+
+.header > .title {
+    font-size:40px;
+}
